# rendere

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
src/: main.cpp
src/app/: Application.cpp  Application.hpp
src/core/: Document.cpp  Document.hpp  Exporter.cpp  Exporter.hpp  Layer.cpp  Layer.hpp  MathUtils.hpp  Renderer.cpp  Renderer.hpp  Selection.cpp  Selection.hpp
src/gui/: GuiManager.cpp  GuiManager.hpp  LayerPanel.cpp  LayerPanel.hpp  Toolbar.cpp  Toolbar.hpp
src/tools/: BrushTool.cpp  BrushTool.hpp  SelectionTool.cpp  SelectionTool.hpp  Tool.hpp
